--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -4,7 +4,8 @@ add_subdirectory(00_triangle)
 add_subdirectory(01_indexed_plane)
 add_subdirectory(02_depth_buffer)
 add_subdirectory(03_texture)
-add_subdirectory(04_viewer)
-add_subdirectory(05_model)
-add_subdirectory(06_blinn_phong)
+add_subdirectory(04_framebuffer)
+add_subdirectory(05_viewer)
+add_subdirectory(06_model)
+add_subdirectory(07_blinn_phong)
 
