--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -9,3 +9,4 @@ add_subdirectory(05_viewer)
 add_subdirectory(06_model)
 add_subdirectory(07_blinn_phong)
 add_subdirectory(08_normal_mapping)
+add_subdirectory(09_shadow_mapping)
