cel-shading example (post-process edge detection, bird asset)

--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -12,3 +12,4 @@ add_subdirectory(08_normal_mapping)
 add_subdirectory(09_shadow_mapping)
 add_subdirectory(10_ambient_occlussion)
 add_subdirectory(11_physically_based)
+add_subdirectory(12_cel_shading)
