compile flags: fast-math, micro-architecture optimization

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,12 +27,12 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/bin)
 #########################################
 set(GCC_COMPILE_OPTIONS "-W;-Wall;-Wno-unused-variable;-Wno-unused-parameter")
 set(GCC_COMPILE_DEBUG_OPTIONS "${GCC_COMPILE_OPTIONS};-ggdb;-O0")
-set(GCC_COMPILE_RELEASE_OPTIONS "${GCC_COMPILE_OPTIONS};-O3")
+set(GCC_COMPILE_RELEASE_OPTIONS "${GCC_COMPILE_OPTIONS};-O3;-march=native;-ffast-math;")
 set(GCC_COMPILE_SUPPRESS_WARING "-w")
 
 set(MSVC_COMPILE_OPTIONS "/W3;/wd4244;/wd4305")
 set(MSVC_COMPILE_DEBUG_OPTIONS "${MSVC_COMPILE_OPTIONS};/Zi")
-set(MSVC_COMPILE_RELEASE_OPTIONS "${MSVC_COMPILE_OPTIONS};/O2")
+set(MSVC_COMPILE_RELEASE_OPTIONS "${MSVC_COMPILE_OPTIONS};/O2;/fp:fast;/arch")
 set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
 
 add_compile_options("$<$<AND:$<CXX_COMPILER_ID:GNU>,$<CONFIG:DEBUG>>:${GCC_COMPILE_DEBUG_OPTIONS}>")
